Bug 268023 - Rekonq crashes when invoked with an URL
Summary: Rekonq crashes when invoked with an URL
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-09 00:39 UTC by Christoph Feck
Modified: 2011-03-09 17:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2011-03-09 00:39:02 UTC
Application: rekonq (0.6.86)
KDE Platform Version: 4.6.41 (4.7 >= 20110106) (Compiled from sources)
Qt Version: 4.7.2
Operating System: Linux 2.6.34.7-0.7-desktop i686
Distribution: "openSUSE 11.3 (i586)"

-- Information about the crash:
- What I was doing when the application crashed:

Just typed "rekonq http://kde.org" in Konsole ... >>>>>>>> crash

The crash can be reproduced every time.

-- Backtrace:
Application: rekonq (kdeinit4), signal: Segmentation fault
[KCrash Handler]
#7  0xb17da734 in MainWindow::mainView (this=0x0) at /local/git/extragear/network/rekonq/src/mainwindow.h:73
#8  0xb17d81f5 in Application::loadUrl (this=0xbfd3fea0, url=..., type=@0xbfd3f09c) at /local/git/extragear/network/rekonq/src/application.cpp:356
#9  0xb17d7780 in Application::newInstance (this=0xbfd3fea0) at /local/git/extragear/network/rekonq/src/application.cpp:149
#10 0xb7672a74 in KUniqueApplicationAdaptor::newInstance (this=0x814ef28, asn_id=..., args=...) at /local/git/KDE/libs/kdelibs/kdeui/kernel/kuniqueapplication.cpp:436
#11 0xb7672cd1 in KUniqueApplicationAdaptor::qt_metacall (this=0x814ef28, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbfd3f2b4) at /local/build/KDE/libs/kdelibs/kdeui/kuniqueapplication_p.moc:81
#12 0xb7026e9c in QDBusConnectionPrivate::deliverCall (this=0x80f1d28, object=0x814ef28, msg=..., metaTypes=..., slotIdx=4) at /local/git/Qt/qt/src/dbus/qdbusintegrator.cpp:942
#13 0xb7026721 in QDBusConnectionPrivate::activateCall (this=0x80f1d28, object=0x814ef28, flags=337, msg=...) at /local/git/Qt/qt/src/dbus/qdbusintegrator.cpp:845
#14 0xb7029f89 in QDBusConnectionPrivate::activateObject (this=0x80f1d28, node=..., msg=..., pathStartPos=16) at /local/git/Qt/qt/src/dbus/qdbusintegrator.cpp:1410
#15 0xb702a81b in QDBusActivateObjectEvent::placeMetaCall (this=0x8178e40) at /local/git/Qt/qt/src/dbus/qdbusintegrator.cpp:1524
#16 0xb6e9d81f in QObject::event (this=0xbfd3fea0, e=0x8178e40) at /local/git/Qt/qt/src/corelib/kernel/qobject.cpp:1217
#17 0xb6e886f5 in QCoreApplication::event (this=0xbfd3fea0, e=0x8178e40) at /local/git/Qt/qt/src/corelib/kernel/qcoreapplication.cpp:1616
#18 0xb62059ef in QApplication::event (this=0xbfd3fea0, e=0x8178e40) at /local/git/Qt/qt/src/gui/kernel/qapplication.cpp:2503
#19 0xb620aeca in QApplicationPrivate::notify_helper (this=0x80fb260, receiver=0xbfd3fea0, e=0x8178e40) at /local/git/Qt/qt/src/gui/kernel/qapplication.cpp:4462
#20 0xb62087c6 in QApplication::notify (this=0xbfd3fea0, receiver=0xbfd3fea0, e=0x8178e40) at /local/git/Qt/qt/src/gui/kernel/qapplication.cpp:3862
#21 0xb76686e2 in KApplication::notify (this=0xbfd3fea0, receiver=0xbfd3fea0, event=0x8178e40) at /local/git/KDE/libs/kdelibs/kdeui/kernel/kapplication.cpp:311
#22 0xb6e86e5b in QCoreApplication::notifyInternal (this=0xbfd3fea0, receiver=0xbfd3fea0, event=0x8178e40) at /local/git/Qt/qt/src/corelib/kernel/qcoreapplication.cpp:787
#23 0xb6e8a75d in QCoreApplication::sendEvent (receiver=0xbfd3fea0, event=0x8178e40) at ../../include/QtCore/../../../../git/Qt/qt/src/corelib/kernel/qcoreapplication.h:215
#24 0xb6e87ef4 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x805bd58) at /local/git/Qt/qt/src/corelib/kernel/qcoreapplication.cpp:1428
#25 0xb6e87bb1 in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at /local/git/Qt/qt/src/corelib/kernel/qcoreapplication.cpp:1321
#26 0xb6ebbcec in QCoreApplication::sendPostedEvents () at ../../include/QtCore/../../../../git/Qt/qt/src/corelib/kernel/qcoreapplication.h:220
#27 0xb6ebae4e in postEventSourceDispatch (s=0x80fd320) at /local/git/Qt/qt/src/corelib/kernel/qeventdispatcher_glib.cpp:277
#28 0xb5915b49 in g_main_dispatch (context=0x80fd298) at gmain.c:1960
#29 IA__g_main_context_dispatch (context=0x80fd298) at gmain.c:2513
#30 0xb5916350 in g_main_context_iterate (context=0x80fd298, block=1, dispatch=1, self=0x80fb378) at gmain.c:2591
#31 0xb591660e in IA__g_main_context_iteration (context=0x80fd298, may_block=1) at gmain.c:2654
#32 0xb6ebb614 in QEventDispatcherGlib::processEvents (this=0x80fae40, flags=...) at /local/git/Qt/qt/src/corelib/kernel/qeventdispatcher_glib.cpp:422
#33 0xb62d40b4 in QGuiEventDispatcherGlib::processEvents (this=0x80fae40, flags=...) at /local/git/Qt/qt/src/gui/kernel/qguieventdispatcher_glib.cpp:204
#34 0xb6e84bb9 in QEventLoop::processEvents (this=0xbfd3fe2c, flags=...) at /local/git/Qt/qt/src/corelib/kernel/qeventloop.cpp:149
#35 0xb6e84cfd in QEventLoop::exec (this=0xbfd3fe2c, flags=...) at /local/git/Qt/qt/src/corelib/kernel/qeventloop.cpp:201
#36 0xb6e87546 in QCoreApplication::exec () at /local/git/Qt/qt/src/corelib/kernel/qcoreapplication.cpp:1064
#37 0xb62083f8 in QApplication::exec () at /local/git/Qt/qt/src/gui/kernel/qapplication.cpp:3736
#38 0xb186d259 in kdemain (argc=2, argv=0x80c0b98) at /local/git/extragear/network/rekonq/src/main.cpp:215
#39 0x0804de32 in launch (argc=2, _name=0x80c55c4 "/local/kde4/bin/rekonq", args=0x80c5639 "\001", cwd=0x0, envc=1, envs=0x80c564a "", reset_env=false, tty=0x0, avoid_loops=false, startup_id_str=
    0x80c564e "duo;1299627037;917000;11251_TIME300473697") at /local/git/KDE/libs/kdelibs/kinit/kinit.cpp:734
#40 0x0804eed5 in handle_launcher_request (sock=7, who=0x8053378 "launcher") at /local/git/KDE/libs/kdelibs/kinit/kinit.cpp:1226
#41 0x0804f616 in handle_requests (waitForPid=0) at /local/git/KDE/libs/kdelibs/kinit/kinit.cpp:1419
#42 0x08050f38 in main (argc=1, argv=0xbfd40784, envp=0xbfd4078c) at /local/git/KDE/libs/kdelibs/kinit/kinit.cpp:1907

Reported using DrKonqi
Comment 1 Andrea Diamantini 2011-03-09 17:30:36 UTC
My fault... the fix for the "rekonq always restart" bug was not perfect... Fixing it in a while...
Comment 2 Andrea Diamantini 2011-03-09 17:34:47 UTC
Git commit 8b62f205b28dd9d4baf07bdce622c01a884097db by Andrea Diamantini.
Committed on 09/03/2011 at 17:33.
Pushed by adjam into branch 'master'.

This is a first commit fixing the "dangerous" changes introduced to fix
bug 266837.
We basically have now a mainWindow() slot widely used in rekonq, that can return
a null pointer.

Checking the code again to ensure this is the unique bug caused by the change...

BUG:268023

M  +1    -1    src/application.cpp     

http://commits.kde.org/rekonq/8b62f205b28dd9d4baf07bdce622c01a884097db