This is a first commit fixing the "dangerous" changes introduced to fix bug 266837. We basically have now a mainWindow() slot widely used in rekonq, that can return a null pointer.

Checking the code again to ensure this is the unique bug caused by the change...

BUG:268023